force-app/main/default/objects/IOM_Amendment_Request__c/IOM_Amendment_Request__c.object-meta.xml
<CustomObject>
    <description>IOM Amendment Requests for all Change request</description>
    <label>Amendment Request</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>