force-app/main/default/objects/IOM_Amendment_Request__c/fields/IOM_Account__c.field-meta.xml
<CustomField>
    <fullName>IOM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Account for which the Amendment Request is raised</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Amendment Requests</relationshipLabel>
    <relationshipName>Amendment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>