force-app/main/default/objects/IOM_Amendment_Request__c/fields/IOM_Actioned_By_in_IOM__c.field-meta.xml
<CustomField>
    <fullName>IOM_Actioned_By_in_IOM__c</fullName>
    <description>Track and view the user detail in CRM who actioned on the amendment request in IOM</description>
    <label>Actioned By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>