force-app/main/default/objects/IOM_Amendment_Request__c/fields/IOM_Actioned_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>IOM_Actioned_Date_Time__c</fullName>
    <description>Track and view the Date Time in CRM when the amendment request is actioned in IOM</description>
    <label>Actioned Date Time</label>
    <type>DateTime</type>
</CustomField>