force-app/main/default/objects/IOM_Amendment_Request__c/fields/IOM_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>IOM_Cancel_Reason__c</fullName>
    <label>IOM Cancel Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>