force-app/main/default/objects/IOM_Amendment_Request__c/fields/IOM_Change_request_No__c.field-meta.xml
<CustomField>
    <fullName>IOM_Change_request_No__c</fullName>
    <description>IOM Change Request No</description>
    <externalId>true</externalId>
    <label>IOM Change Request No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>