force-app/main/default/objects/IOM_Amendment_Request__c/fields/IOM_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>IOM_Lost_Reason__c</fullName>
    <label>IOM Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR Cancel / Re-bill</fullName>
            </value>
            <value>
                <fullName>Booth/Sponsorship Cancellation</fullName>
            </value>
            <value>
                <fullName>Budget - Budget Decrease</fullName>
            </value>
            <value>
                <fullName>Budget - Budget not approved yet</fullName>
            </value>
            <value>
                <fullName>Budget - Budget Reallocated</fullName>
            </value>
            <value>
                <fullName>Budget - No Budget</fullName>
            </value>
            <value>
                <fullName>Budget - No Budget left</fullName>
            </value>
            <value>
                <fullName>Customer Unresponsive</fullName>
            </value>
            <value>
                <fullName>Digital / Print Cancellation</fullName>
            </value>
            <value>
                <fullName>Duplicate opportunity</fullName>
            </value>
            <value>
                <fullName>Event Edition Closed</fullName>
            </value>
            <value>
                <fullName>Input error</fullName>
            </value>
            <value>
                <fullName>Lost - Interested in Next Edition</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Not enough reach to their target audience</fullName>
            </value>
            <value>
                <fullName>Pricing/Cost – Too high</fullName>
            </value>
            <value>
                <fullName>Technical Error</fullName>
            </value>
            <value>
                <fullName>Timing – Campaign Delayed</fullName>
            </value>
            <value>
                <fullName>Timing – Creative won’t be done in time</fullName>
            </value>
            <value>
                <fullName>Timing – Product still in Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>