force-app/main/default/objects/IOM_Amendment_Request__c/fields/IOM_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>IOM_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent Opportunity for Amendment request</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Amendment Requests</relationshipLabel>
    <relationshipName>IOM_Amendment_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>