force-app/main/default/objects/IOM_Amendment_Request__c/fields/IOM_Request_Category__c.field-meta.xml
<CustomField>
    <fullName>IOM_Request_Category__c</fullName>
    <description>Request Category Type</description>
    <label>ZZZ_Request Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill To Account Change</fullName>
                <label>Account - Bill To Account Change To Different Account</label>
            </value>
            <value>
                <fullName>Billing Address Change</fullName>
                <label>Account - Bill To Address Update Same Account</label>
            </value>
            <value>
                <fullName>Account Name Change</fullName>
                <label>Account - Name Update</label>
            </value>
            <value>
                <fullName>Ship To Account Change</fullName>
                <label>Account - Ship To Account Change To Different Account</label>
            </value>
            <value>
                <fullName>Shipping Address Change</fullName>
                <label>Account - Ship To Address Update Same Account</label>
            </value>
            <value>
                <fullName>Billing Schedule Change</fullName>
                <label>Billing Options Update</label>
            </value>
            <value>
                <fullName>Campaign Run Dates Change</fullName>
                <label>Campaign Run Dates Update</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Update Bill To Contact</fullName>
                <label>Contact - Bill To Contact Change To Different Contact</label>
            </value>
            <value>
                <fullName>Bill to Contact Details Change</fullName>
                <label>Contact - Bill To Contact Update Same Contact</label>
            </value>
            <value>
                <fullName>PO number change</fullName>
                <label>PO Number Update</label>
            </value>
            <value>
                <fullName>Tax Exempt Rebill</fullName>
            </value>
            <value>
                <fullName>VAT Registration Number Change</fullName>
                <label>VAT Registration Number Update</label>
            </value>
            <value>
                <fullName>Number of Impressions Amendment</fullName>
                <isActive>false</isActive>
                <label>Number of Impressions Amendment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>