force-app/main/default/objects/IOM_Amendment_Request__c/fields/IOM_Request_Instruction__c.field-meta.xml
<CustomField>
    <fullName>IOM_Request_Instruction__c</fullName>
    <description>Amendment Request Instruction</description>
    <label>Request Instruction</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>