force-app/main/default/objects/IOM_Amendment_Request__c/fields/IOM_Sales_Operations_Comments__c.field-meta.xml
<CustomField>
    <fullName>IOM_Sales_Operations_Comments__c</fullName>
    <description>Sales Operations Comments</description>
    <label>Request Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>